Add basic survey structure with radio buttons in html.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,103 @@
   <body>
     <div class="container">
       <h1>Programming Language Suggester</h1>
-      
+      <ol>
+        <li>Are you into style and design?</li>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q1" value="yes">
+            Yes
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q1" value="maybe">
+            Maybe
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q1" value="no">
+            No
+          </label>
+        </div>
+        <li>Are you a researcher or someone who works with a lot of data?</li>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q2" value="yes">
+            Yes
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q2" value="maybe">
+            Maybe
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q2" value="no">
+            No
+          </label>
+        </div>
+        <li>Do you love Apple products?</li>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q3" value="yes">
+            Yes
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q3" value="maybe">
+            Maybe
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q3" value="no">
+            No
+          </label>
+        </div>
+        <li>Are you interested in working for a large enterprise such as a bank, hospital, or university?</li>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q4" value="yes">
+            Yes
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q4" value="maybe">
+            Maybe
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q4" value="no">
+            No
+          </label>
+        </div>
+        <li>Do you have lots of ideas that you want to turn into working applications?</li>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q5" value="yes">
+            Yes
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q5" value="maybe">
+            Maybe
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q5" value="no">
+            No
+          </label>
+        </div>
+      </ol>
     </div>
   </body>
 </html>
