Add else-if branches in JS.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               No
             </label>
           </div>
-          <li>Are you a researcher or someone who works with a lot of data?</li>
+          <li>Are you a researcher or someone who works with data?</li>
           <div class="radio">
             <label>
               <input type="radio" name="q2" value="yes">
@@ -112,11 +112,11 @@
         <button type="submit" class="btn">Help Me Decide!</button>
       </form>
       <p class="quiz results">Based on your quiz responses, you should learn...</p>
-      <p class="results">JavaScript!</p>
-      <p class="results">Java!</p>
-      <p class="results">Swift!</p>
-      <p class="results">Python!</p>
-      <p class="results">Ruby!</p>
+      <p class="results" id="js">JavaScript!</p>
+      <p class="results" id="java">Java!</p>
+      <p class="results" id="swift">Swift!</p>
+      <p class="results" id="python">Python!</p>
+      <p class="results" id="ruby">Ruby!</p>
     </div>
   </body>
 </html>
