Add more detail to if conditions in JS.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p class="quiz">Having trouble deciding what programming language to learn? Take this quiz to get a suggestion!</p>
       <form id="quiz">
         <ol>
-          <li>Are you into style and design?</li>
+          <li>Do you love style and design?</li>
           <div class="radio">
             <label>
               <input type="radio" name="q1" value="yes">
@@ -32,7 +32,7 @@
               No
             </label>
           </div>
-          <li>Are you a researcher or someone who works with data?</li>
+          <li>Do you love doing research or working with data?</li>
           <div class="radio">
             <label>
               <input type="radio" name="q2" value="yes">
