Add button for clearing the form.

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         </ol>
         <button type="submit" class="btn">Help Me Decide!</button>
       </form>
+      <button id="clear" class="btn">Clear Form</button>
       <p class="quiz results">Based on your quiz responses, you should learn...</p>
       <p class="results" id="js">JavaScript!</p>
       <p class="results" id="java">Java!</p>
