Add background in CSS.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="panel panel-default">
+      <div class="panel panel-default" id="heading">
         <h1>Programming Language Suggester</h1>
         <p class="quiz">Having trouble deciding what programming language to learn? Take this quiz to get a suggestion!</p>
       </div>
