Update quiz responses in html with more detailed descriptions.

--- a/index.html
+++ b/index.html
@@ -20,95 +20,95 @@
             <div class="radio">
               <label>
                 <input type="radio" name="q1" value="yes">
-                Yes
+                Yes, I love being artistic and I'm extremely fashionable.
               </label>
             </div>
             <div class="radio">
               <label>
                 <input type="radio" name="q1" value="maybe">
-                Maybe
+                My sense of style is ok, but it's not my highest priority.
               </label>
             </div>
             <div class="radio">
               <label>
                 <input type="radio" name="q1" value="no">
-                No
+                No, I don't enjoy making things look pretty.
               </label>
             </div>
             <li>Do you love doing research or working with data?</li>
             <div class="radio">
               <label>
                 <input type="radio" name="q2" value="yes">
-                Yes
+                Yes, there's nothing more compelling to me than working on a riveting research question.
               </label>
             </div>
             <div class="radio">
               <label>
                 <input type="radio" name="q2" value="maybe">
-                Maybe
+                Research and data are ok but they're not my favorite.
               </label>
             </div>
             <div class="radio">
               <label>
                 <input type="radio" name="q2" value="no">
-                No
+                No, working with research data sounds like a terrible way to spend my time.
               </label>
             </div>
             <li>Do you love Apple products?</li>
             <div class="radio">
               <label>
                 <input type="radio" name="q3" value="yes">
-                Yes
+                Yes, I am an Apple fanatic. I don't know what those Android and Windows users are thinking.
               </label>
             </div>
             <div class="radio">
               <label>
                 <input type="radio" name="q3" value="maybe">
-                Maybe
+                I don't really have a preference between Apple and non-Apple devices.
               </label>
             </div>
             <div class="radio">
               <label>
                 <input type="radio" name="q3" value="no">
-                No
+                No, I dislike Apple products and have no desire to work in the iOS world.
               </label>
             </div>
             <li>Are you interested in working for a large enterprise such as a bank, hospital, or university?</li>
             <div class="radio">
               <label>
                 <input type="radio" name="q4" value="yes">
-                Yes
+                Yes, I feel right at home when I'm part of a big institution that impacts a lot of people.
               </label>
             </div>
             <div class="radio">
               <label>
                 <input type="radio" name="q4" value="maybe">
-                Maybe
+                Maybe. Company size isn't really an important factor to me.
               </label>
             </div>
             <div class="radio">
               <label>
                 <input type="radio" name="q4" value="no">
-                No
+                No, I don't like big institution environments. I much prefer the idea of working at smaller startups or doing my own thing as a freelancer.
               </label>
             </div>
             <li>Do you have lots of ideas that you want to turn into working applications?</li>
             <div class="radio">
               <label>
                 <input type="radio" name="q5" value="yes">
-                Yes
+                Yes, I'm constantly thinking of new apps I'd want to build.
               </label>
             </div>
             <div class="radio">
               <label>
                 <input type="radio" name="q5" value="maybe">
-                Maybe
+                Building new apps from scratch does sound interesting, but it's not my highest priority.
               </label>
             </div>
             <div class="radio">
               <label>
                 <input type="radio" name="q5" value="no">
-                No
+                No, I'd rather work with other people's ideas or with apps that already exist than try to come up with ideas for brand new ones.
               </label>
             </div>
           </ol>
