Change some p's into h4's in html for larger text.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="panel panel-default" id="heading">
         <h1>Programming Language Suggester</h1>
-        <p class="quiz">Having trouble deciding what programming language to learn? Take this quiz to get a suggestion!</p>
+        <h4 class="quiz">Not sure which programming language to learn? Take this quiz to get a suggestion!</h4>
       </div>
       <div class="panel panel-default">
         <form id="quiz">
@@ -117,12 +117,12 @@
         <button id="clear" class="btn">Clear Form</button>
       </div>
       <div class="panel panel-default results">
-        <p class="quiz results">Based on your responses, you should learn...</p>
-        <p class="language" id="js">JavaScript!</p>
-        <p class="language" id="java">Java!</p>
-        <p class="language" id="swift">Swift!</p>
-        <p class="language" id="python">Python!</p>
-        <p class="language" id="ruby">Ruby!</p>
+        <h4 class="quiz results">Based on your responses, you should learn...</h4>
+        <h4 class="language" id="js">JavaScript!</h4>
+        <h4 class="language" id="java">Java!</h4>
+        <h4 class="language" id="swift">Swift!</h4>
+        <h4 class="language" id="python">Python!</h4>
+        <h4 class="language" id="ruby">Ruby!</h4>
       </div>
     </div>
   </body>
