--- a/index.html
+++ b/index.html
@@ -118,28 +118,28 @@
       </div>
       <div class="panel panel-default results" id="js">
         <h4 class="quiz">Based on your responses, you should learn...</h4>
-        <h4 class="language">JavaScript!</h4>
-        <p>Anyone interested in front-end design work should learn HTML and CSS - and after learning those, JavaScript is the logical next step for taking your webpages from being static to interactive. Unlike HTML and CSS, JavaScript is a full programming language. It is used to fuel a website's behavior. JavaScript has become increasingly popular, and it now lives outside web browsers as well. Learning JavaScript will put you in a good place as it becomes a more general-purpose language.</p>
+        <h3 class="language">JavaScript!</h3>
+        <h4>Anyone interested in front-end design work should learn HTML and CSS - and after learning those, JavaScript is the logical next step for taking your webpages from being static to interactive. Unlike HTML and CSS, JavaScript is a full programming language. It is used to fuel a website's behavior. JavaScript has become increasingly popular, and it now lives outside web browsers as well. Learning JavaScript will put you in a good place as it becomes a more general-purpose language.</h4>
       </div>
       <div class="panel panel-default results" id="java">
         <h4 class="quiz">Based on your responses, you should learn...</h4>
-        <h4 class="language">Java!</h4>
-        <p>Java can be used for anything from web applications to desktop and mobile apps. Java has a strong presence among large enterprise applications. It also powers Android apps, so it’s a good choice for those inclined toward mobile development.</p>
+        <h3 class="language">Java!</h3>
+        <h4>Java can be used for anything from web applications to desktop and mobile apps. Java has a strong presence among large enterprise applications. It also powers Android apps, so it’s a good choice for those inclined toward mobile development.</h4>
       </div>
       <div class="panel panel-default results" id="swift">
         <h4 class="quiz">Based on your responses, you should learn...</h4>
-        <h4 class="language">Swift!</h4>
-        <p>Apple released Swift as a modern language for developing Mac, iPad, iPhone, Apple Watch, and Apple TV applications. If you want to enter the world of iOS, Swift is the best language to learn (and you may want to gain some understanding of Objective-C too).</p>
+        <h3 class="language">Swift!</h3>
+        <h4>Apple released Swift as a modern language for developing Mac, iPad, iPhone, Apple Watch, and Apple TV applications. If you want to enter the world of iOS, Swift is the best language to learn (and you may want to gain some understanding of Objective-C too).</h4>
       </div>
       <div class="panel panel-default results" id="python">
         <h4 class="quiz">Based on your responses, you should learn...</h4>
-        <h4 class="language">Python!</h4>
-        <p>Python is a general-purpose language used for everything from server automation to data science. Python is a great language for beginners, because it is easy to read and understand. You can also do so many things with Python that it’s easy to stick with the language for quite a while before needing something else. Python finds itself at home both creating Web apps like Instagram and helping researchers make sense of their data.</p>
+        <h3 class="language">Python!</h3>
+        <h4>Python is a general-purpose language used for everything from server automation to data science. Python is a great language for beginners, because it is easy to read and understand. You can also do so many things with Python that it’s easy to stick with the language for quite a while before needing something else. Python finds itself at home both creating Web apps like Instagram and helping researchers make sense of their data.</h4>
       </div>
       <div class="panel panel-default results" id="ruby">
         <h4 class="quiz">Based on your responses, you should learn...</h4>
-        <h4 class="language">Ruby!</h4>
-        <p>Ruby is often associated with the Rails framework that helped popularize it. Used widely among web startups and big companies alike, Ruby and Rails jobs are pretty easy to come by. Ruby and Rails make it easy to transform an idea into a working application, and they have been used to bring us Twitter, GitHub, and Treehouse.</p>
+        <h3 class="language">Ruby!</h3>
+        <h4>Ruby is often associated with the Rails framework that helped popularize it. Used widely among web startups and big companies alike, Ruby and Rails jobs are pretty easy to come by. Ruby and Rails make it easy to transform an idea into a working application, and they have been used to bring us Twitter, GitHub, and Treehouse.</h4>
       </div>
     </div>
   </body>
