Add text input to collect user's name.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       </div>
       <div class="panel panel-default">
         <form id="quiz">
+          <div class="form-group">
+            <label for="name">Please enter your name:</label>
+            <input id="name" class="form-control" type="text">
+          </div>
           <ol>
             <li>Do you love style and design?</li>
             <div class="radio">
