Update if condition to make user enter a name and add user's name into html for JavaScript result.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <button id="clear" class="btn">Clear Form</button>
       </div>
       <div class="panel panel-default results" id="js">
-        <h4 class="quiz">Based on your responses, you should learn...</h4>
+        <h4 class="quiz">Based on your responses, <span id="output"></span>, you should learn...</h4>
         <h3 class="language">JavaScript!</h3>
         <h4>Anyone interested in front-end design work should learn HTML and CSS - and after learning those, JavaScript is the logical next step for taking your webpages from being static to interactive. Unlike HTML and CSS, JavaScript is a full programming language. It is used to fuel a website's behavior. JavaScript has become increasingly popular, and it now lives outside web browsers as well. Learning JavaScript will put you in a good place as it becomes a more general-purpose language.</h4>
       </div>
