Add span tags and edit questions.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input id="name" class="form-control" type="text">
           </div>
           <ol>
-            <li>Do you love style and design?</li>
+            <li>Do you love <span class="important">style</span> and <span class="important">design</span>?</li>
             <div class="radio">
               <label>
                 <input type="radio" name="q1" value="yes">
@@ -30,7 +30,7 @@
             <div class="radio">
               <label>
                 <input type="radio" name="q1" value="maybe">
-                My sense of style is ok, but it's not my highest priority.
+                My sense of style is OK, but it's not my highest priority.
               </label>
             </div>
             <div class="radio">
@@ -39,7 +39,7 @@
                 No, I don't enjoy making things look pretty.
               </label>
             </div>
-            <li>Do you love doing research or working with data?</li>
+            <li>Do you love doing <span class="important">research</span> or working with <span class="important">data</span>?</li>
             <div class="radio">
               <label>
                 <input type="radio" name="q2" value="yes">
@@ -49,7 +49,7 @@
             <div class="radio">
               <label>
                 <input type="radio" name="q2" value="maybe">
-                Research and data are ok but they're not my favorite.
+                Research and data are fine but they're not necessarily my favorite.
               </label>
             </div>
             <div class="radio">
@@ -58,11 +58,11 @@
                 No, working with research data sounds like a terrible way to spend my time.
               </label>
             </div>
-            <li>Do you love Apple products?</li>
+            <li>Do you love <span class="important">Apple</span> products?</li>
             <div class="radio">
               <label>
                 <input type="radio" name="q3" value="yes">
-                Yes, I am an Apple fanatic. I don't know what those Android and Windows users are thinking.
+                Yes, I'm an Apple fanatic. I don't know what those Android and Windows users are thinking.
               </label>
             </div>
             <div class="radio">
@@ -77,7 +77,7 @@
                 No, I dislike Apple products and have no desire to work in the iOS world.
               </label>
             </div>
-            <li>Are you interested in working for a large enterprise such as a bank, hospital, or university?</li>
+            <li>Are you interested in working for a <span class="important">large enterprise</span> such as a bank, hospital, or university?</li>
             <div class="radio">
               <label>
                 <input type="radio" name="q4" value="yes">
@@ -93,10 +93,10 @@
             <div class="radio">
               <label>
                 <input type="radio" name="q4" value="no">
-                No, I don't like big institution environments. I much prefer the idea of working at smaller startups or doing my own thing as a freelancer.
+                No, I don't like big institution environments. I prefer working at smaller startups or doing my own thing as a freelancer.
               </label>
             </div>
-            <li>Do you have lots of ideas that you want to turn into working applications?</li>
+            <li>Do you have lots of <span class="important">ideas</span> that you want to turn into working <span class="important">applications</span>?</li>
             <div class="radio">
               <label>
                 <input type="radio" name="q5" value="yes">
@@ -112,7 +112,7 @@
             <div class="radio">
               <label>
                 <input type="radio" name="q5" value="no">
-                No, I'd rather work with other people's ideas or with apps that already exist than try to come up with ideas for brand new ones.
+                No, I'd rather work with other people's ideas or with apps that already exist.
               </label>
             </div>
           </ol>
